@@ -1,3 +1,7 @@
+* Errors generated by try() are now part of the output (for R >= 3.4). To
+  achieve this, the try.outFile option is set for the duration of all
+  evaluations (@krlmlr, #88)
+
 Version 0.12
 ------------------------------------------------------------------------------
 
